--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
   </head>
   <body>
     <button id="launch-button">🚀 Launch Game</button>
+    <div id="loading-text">Loading<span class="dots"></span></div>
     <canvas id="unity-canvas"></canvas>
-    
+
     <script>
-      document.getElementById("launch-button").onclick = function () {
-        const canvas = document.getElementById("unity-canvas");
-        document.getElementById("launch-button").style.display = "none";
+      const launchButton = document.getElementById("launch-button");
+      const loadingText = document.getElementById("loading-text");
+      const canvas = document.getElementById("unity-canvas");
+
+      launchButton.onclick = function () {
+        launchButton.style.display = "none";
+        loadingText.style.display = "block";
+
         canvas.style.display = "block";
 
         createUnityInstance(canvas, {
@@ -26,6 +32,7 @@
           productVersion: "0.1.0",
         }).then((unityInstance) => {
           unityInstance.SetFullscreen(1);
+          loadingText.style.display = "none";
         }).catch((err) => {
           alert("Failed to load: " + err);
         });
